--- a/coursework/CSC8018_Ocean_project_Website/Ocean_Cleanup/ocean_cleanup.html
+++ b/coursework/CSC8018_Ocean_project_Website/Ocean_Cleanup/ocean_cleanup.html
@@ -9,24 +9,211 @@
 </head>
 
 <body>
-    <header>
-        <div>
-
+    <header class="header_container">
+        <div class="title_container" style="margin-left: auto">
+        <h1>
+            <span class="h1_span_1">THE</span><span class="h1_span_2">OCEAN</span><span class="h1_span_3">CLEANUP</span>
+        </h1>
         </div>
         <navbar>
-            </div>
-            <ul class="nav__list">
-                <li class="nav__item"><a href="#marineplasticdebris" class="nav__link">Marine Plastic Debris</a></li>
-                <li class="nav__item"><a href="#history" class="nav__link">History</a></li>
-                <li class="nav__item"><a href="#technology" class="nav__link">Technology</a></li>
-                <li class="nav__item"><a href="#mitigation" class="nav__link">Mitigation</a></li>
+            <ul class="nav_list">
+                <li class="nav_item"><a href="#marineplasticdebris" class="nav_link">Marine Plastic Debris</a></li>
+                <li class="nav_item"><a href="#history" class="nav_link">History</a></li>
+                <li class="nav_item"><a href="#technology" class="nav_link">Technology</a></li>
+                    <ul class="tech_list">
+                        <li class="tech_list_item">Ocean Cleanup</li>
+                        <li class="tech_list_item">River Interception</li>
+                        <li class="tech_list_item">Plastic Recycling</li>
+                    </ul>
+                <li class="nav_item"><a href="#mitigation" class="nav_link">Mitigation</a></li>
             </ul>
         </navbar>
-
     </header>
 
-    <footer>
+    <div class="main_block">
+        <section id="summary" class="main_text">
+            <h2 class="h2_titles" style="display: none;">Summary</h2>
+            <p>The Ocean Cleanup is a nonprofit engineering environmental organization based in the Netherlands, founded in 2013 by Boyan Slat, a Dutch-born inventor-entrepreneur of Croatian and Dutch origin who serves as its CEO. It develops technology to extract plastic pollution from the oceans and intercept it in rivers before it can reach the ocean. The organization conducts scientific research into oceanic plastic pollution. It has conducted two expeditions to the North Pacific Gyre, the Mega Expedition and the Aerial Expedition, and continues to publish scientific papers.</p>
+            <div class="video_container">
+                <iframe width="420" height="315" class="video"
+                src="https://www.youtube-nocookie.com/embed/ROW9F-c0kIQ">
+                </iframe>
+            </div>
+        </section>
 
+        <section id="marine_plastic" class="main_text">
+            <h2 class="h2_titles">Marine Plastic Debris</h2>
+            <div>It is estimated that there is a stock of 86 million tons of plastic marine debris in the worldwide ocean as of the end of 2013, assuming that 1.4% of global plastics produced from 1950 to 2013 has entered the ocean and has accumulated there. 8.8 million metric tons of plastic waste are dumped in the world's oceans each year. Asia was the leading source of mismanaged plastic waste, with China alone accounting for 2.4 million metric tons. In 2017 the UN estimated that by 2050 there will be more plastic than fish in the oceans, if substantial measures are not taken.</div>
+            <div class="polaroid_container_1">
+                <div class="polaroid">
+                    <img src="http://homepages.cs.ncl.ac.uk/harold.fellermann/csc8018/ocean_cleanup/resources/gyres.png" alt="Image showing that garbage patches have formed in all 5 ocean gyres">
+                    <div class="caption_container">
+                        <div class="polaroid_caption">Garbage patches have formed in all five oceanic gyres.</div>
+                    </div>
+                </div>
+            </div>
+            <div>Plastic waste has reached all the world's oceans. However, it has been found that plastic debris concentrates in the oceanic gyres where it forms extensive garbage patches. Of those, the North Pacific garbage patch is the biggest, with an estimated area of 1.6 million square kilometers. Plastic accumulating in these patches photodegrades into smaller and smaller particles and releases toxic and endocrine chemicals such as bisphenol A (BPA).</div>
+            <div>Plastic pollution harms an estimated 100,000 sea turtles and marine mammals and 1,000,000 sea creatures each year. Larger plastics (called "macroplastics") such as plastic shopping bags can clog the digestive tracts of larger animals when consumed by them and can cause starvation through restricting the movement of food, or by filling the stomach and tricking the animal into thinking it is full. Microplastics on the other hand harm smaller marine life. For example, pelagic plastic pieces in the center of our ocean’s gyres outnumber live marine plankton, and are passed up the food chain to reach all marine life as well as human consumers.</div>
+        </section>
+
+        <section id="decomposition_table" class="main_text">
+            <div class="table_container">
+                <div class="table_title">
+                    <div>How long until it's gone?</div>
+                    <div>Decomposition times of common marine debris</div>
+                </div>
+                <div class="table_body">
+                    <div class="table_row">
+                        <div class="table_column_1" >    2-4 weeks</div>
+                        <div class="table_column_2">    Paper towel</div>
+                    </div>
+                    <div class="table_row">
+                        <div class="table_column_1">    6 weeks</div>
+                        <div class="table_column_2">    Newspaper</div>
+                    </div>
+                    <div class="table_row">
+                        <div class="table_column_1">    2 months</div>
+                        <div class="table_column_2">    Apple core, cardboard box</div>
+                    </div>
+                    <div class="table_row">
+                        <div class="table_column_1">    3 months</div>
+                        <div class="table_column_2">    Waxed carton</div>
+                    </div>
+                    <div class="table_row">
+                        <div class="table_column_1">    2-5 months</div>
+                        <div class="table_column_2">    Cotton shirt</div>
+                    </div>
+                    <div class="table_row">
+                        <div class="table_column_1">    1-3 years</div>
+                        <div class="table_column_2">    Plywood</div>
+                    </div>
+                    <div class="table_row">
+                        <div class="table_column_1">    1-5 years</div>
+                        <div class="table_column_2">    Cigarette butt, wool socks</div>
+                    </div>
+                    <div class="table_row">
+                        <div class="table_column_1">    50 years</div>
+                        <div class="table_column_2">    Plastic beverage holder, styrofoam cup, tin can, foam buoy</div>
+                    </div>
+                    <div class="table_row">
+                        <div class="table_column_1">    200 years</div>
+                        <div class="table_column_2">    Aluminum can</div>
+                    </div>
+                    <div class="table_row">
+                        <div class="table_column_1">    450 years</div>
+                        <div class="table_column_2">    Plastic bottle, disposable nappies</div>
+                    </div>
+                    <div class="table_row">
+                        <div class="table_column_1">    600 years</div>
+                        <div class="table_column_2">    Fishing line</div>
+                    </div>
+                    <div class="table_row">
+                        <div class="table_column_1">    undetermined</div>
+                        <div class="table_column_2">    Glass bottle</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="main_text">
+            <h2 class="h2_titles">History</h2>
+            <div class="polaroid_container_2">
+                <div class="polaroid">
+                    <img src="http://homepages.cs.ncl.ac.uk/harold.fellermann/csc8018/ocean_cleanup/resources/slat_2018.jpg" alt="Picture of Boyan Slat 2008">
+                    <div class="caption_container">
+                        <div class="polaroid_caption">Boyan Slat in 2018</div>
+                    </div>
+                </div>
+            </div>
+            <div>In 2011, aged 16, Dutch Boyan Slat came across more plastic than fish while diving in Greece. He decided to devote a high school project for deeper investigation into ocean plastic pollution and why it was considered impossible to clean up.</div>
+            <div>Slat discontinued his aerospace engineering studies at TU Delft to devote his time to developing his idea. He founded The Ocean Cleanup in 2013. The group's mission is to develop advanced technologies to rid the world's oceans of plastic. In June 2014, the Ocean Cleanup published a 528-page feasibility study about the project's potential.</div>
+            <div>The Ocean Cleanup is mainly funded by donations and sponsors. As of November 2019 it has made a little over $35 million from sponsors including Salesforce chief executive Marc Benioff, philanthropist Peter Thiel, Julius Baer Foundation and Royal DSM. The Ocean Cleanup raised over $2 million with the help of a crowdfunding campaign in 2014.</div>
+        </section>
+
+        <section class="main_text">
+            <h2 class="h2_titles">Technological Approaches</h2>
+            <div class="quote">
+                <em class="quote">"Technology is the most potent agent of change. It is an amplifier of our human capabilities"</em> — Boyan Slat
+            </div>
+        </section>
+
+        <section class="main_text">
+            <h3>Ocean Cleanup</h3>
+            <div>The filtering system uses passive floating structures localized in the ocean gyres. These structures act as a containment boom. The floater drifts with the wind, waves and ocean currents to capture marine debris. A permeable screen underneath the float catches subsurface debris. The system is unmanned and incorporates solar-powered monitoring and navigation systems, including GPS, cameras, lanterns and an automatic identification system (AIS) for vessel traffic services.</div>
+            <div class="polaroid_container_3">
+                <div class="polaroid">
+                    <img src="http://homepages.cs.ncl.ac.uk/harold.fellermann/csc8018/ocean_cleanup/resources/system_001B.jpg" alt="Picture of System 001/B in the ocean">
+                    <div class="caption_container">
+                        <div class="polaroid_caption">System 001/B in the ocean</div>
+                    </div>
+                </div>
+            </div>
+            <div>System 001, deployed in September 2018, consisted of a 800 meters long barrier with a 3 meters wide skirt that hangs beneath it. System 001 encountered difficulties retaining the plastic collected. After two month of operation, during which the system had collected 2,000 kilograms of plastic, mechanical stress caused an 18-meter section of the structure to detach. After several months of root cause analysis and redesign, the organization employed System 001/B which could successfully capture and collect plastic, and even microplastics.</div>
+            <div>At the end of July 2021, the organization revisited the Great Pacific Garbage Patch to trial System 002 -- a revamped version of the previous systems with an increased span of 1,600 metres. The new technology claims to capture 1,000 kg of plastics per day. As of 25 July 2022, The Ocean Cleanup announced to have removed a total of 100,000 kg of plastic from the Great Pacific Garbage Patch.</div>
+            <div>The organization is now developing System 003, which is planned to have a three times bigger plastic intake than the current design. Unlike the previous prototypes, this new system is meant to be a blueprint for an entire fleet of filtering systems able to meet the scale of the problem.</div>
+        </section>
+
+        <section class="main_text">
+            <h3>River Interception</h3>
+            <div class="polaroid_container_4">
+                <div class="polaroid">
+                    <img src="http://homepages.cs.ncl.ac.uk/harold.fellermann/csc8018/ocean_cleanup/resources/interceptor.jpg" alt="Picture of Interceptor in the Domenican Republic">
+                    <div class="caption_container">
+                        <div class="polaroid_caption">Interceptor in the Domenican Republic</div>
+                    </div>
+                </div>
+            </div>
+            <div>Responding to criticism that filtering devices closer to shore are easier to maintain, and likely to recover more plastic per dollar spent, the organization introduced an additional technology in October 2019 -- the River Interpector. Solar-powered Interceptor vessels use floating arms to direct floating waste into the collection conveyor, which dumps trash into dumpsters on a detachable barge below. When full, the collection stops until the barge is removed, emptied and returned to the Interceptor.</div>
+            <div>As of October 2022, The Ocean Cleanup enterntains eight Interceptors in Indonesia, Malaysia, Viet Nam, Dominican Republic, USA and Jamaica.</div>
+        </section>
+
+        <section class="main_text">
+            <h3 class="h3_titles">Plastic Recycling</h3>
+            <div>In October 2020, The Ocean Cleanup launched their first product made from plastic collected from the Great Pacific Garbage Patch, The Ocean Cleanup Sunglasses. The organization worked with DNV GL to develop a certification for plastic from water sources and the sunglasses were certified to originate from the GPGP. Revenue from the sale of recycling products go into their continued cleanup projects.</div>
+        </section>
+
+        <section class="main_text">
+            <h2 class="h2_titles">Check Your Own Plastic Footprint</h2>
+            <div>
+                <h3>Food & Kitchen</h3>
+                <div>    Plastic bottles                         <input type="number" step="1"> / week</div>
+                <div>    Plastic bags                            <input type="number" step="1"> / week</div>
+                <div>    Food wrapping                           <input type="number" step="1"> / week</div>
+                <div>    Yogurt, cream, etc. containers          <input type="number" step="1"> / week</div>
+            </div>
+            <div>
+                <h3>Disposable Containers & Packaging</h3>
+                <div>    Take-away plastic boxes                 <input type="number" step="1"> / month</div>
+                <div>    Take-away cups                          <input type="number" step="1"> / month</div>
+                <div>    Plastic-wrapped packages                <input type="number" step="1"> / month</div>
+            </div>
+            <div>
+                <h3>Bathroom & Laundry</h3>
+                <div>    Detergent & cleaning product bottles    <input type="number" step="1"> / year</div>
+                <div>    Shampoo, conditioner & toiletries       <input type="number" step="1"> / year</div>
+                <div>    Plastic toothbrushes                    <input type="number" step="1"> / year</div>
+                <div>    Toothpaste                              <input type="number" step="1"> / year</div>
+            </div>
+            <div>
+                <h3>Household size</h3>
+                <div>    With how many people do you share your household products?  1</div>
+            </div>
+            <div>
+                <h3>Your Plastic Footprint</h3>
+                <div>    Your estimated plastic footprint is 0 kg / year.</div>
+            </div>
+            <div>
+                <h3>Tip</h3>
+                <div>    Most of your plastic waste originates from unknown sources.</div>
+            </div>
+            <div class="calc_button">
+                Reset calculator
+            </div>
+        </section>
+    </div>
+
+    <footer>
+        <div class="footer_text">Text and images adapted from Wikipedia and The Ocean Cleanup.</div>
     </footer>
 </body>
 
